Fix table being too small

--- a/app/assets/stylesheets/response_view.sass
+++ b/app/assets/stylesheets/response_view.sass
@@ -60,7 +60,7 @@
         border-left: none
         border-top-left-radius: 0
         border-bottom-left-radius: 0
-        padding: 0 $response-answers-table-small-padding
+        padding-left: $response-answers-table-small-padding
         background-color: lighten($screensmart-green, 43%)
         background-color: lighten($screensmart-blue, 58%)
         vertical-align: middle
